// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variant and prop both present object value using different keys: object merged 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  color: red;
  font-size: 14px;
}

.c0 {
  padding: 15px 20px;
}

<button
  class="c0"
>
  <span
    class="c1"
    color="red"
  >
    content
  </span>
</button>
`;

exports[`variant and prop both present object value using same keys: props take priority 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: red;
  font-size: 5px;
}

.c0 {
  padding: 15px 20px;
}

<button
  class="c0"
>
  <span
    class="c1"
    color="red"
  >
    content
  </span>
</button>
`;

exports[`variant and prop both present string value using same keys: props take priority 1`] = `
.c1 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: red;
  font-size: 14px;
}

.c0 {
  padding: 5px 5px;
}

<button
  class="c0"
>
  <span
    class="c1"
    color="red"
  >
    content
  </span>
</button>
`;
